img added for india election;fixed flex wrap

--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ h3 { font-size: var(--fs-h3); }
     width: 100%;
     height: 100%;
     border-radius: 20px;
-    background-color: #535353;
+    background-color: #979797;
     opacity: 0.2;
 }
 
@@ -439,7 +439,7 @@ h3 { font-size: var(--fs-h3); }
 
 .noteworthy-cards {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -448,6 +448,12 @@ h3 { font-size: var(--fs-h3); }
 .noteworthy-cards__item {
     display: flex;
     padding: 1rem;
+}
+
+@media (max-width: 39rem) {
+    .noteworthy-cards {
+        flex-wrap: wrap;
+    }
 }
 
 @media (min-width: 40rem) {
